--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
     <!-- Box icons -->
     
     <!-- Custom StyleSheet -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="styles.css" >
     <title>Boy’s T-Shirt</title>
   </head>
 
