--- a/cart.html
+++ b/cart.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Box icons -->
- 
-  
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+    />
     <!-- Custom StyleSheet -->
     <link rel="stylesheet" href="styles.css" >
     <title>Your Cart</title>
@@ -24,7 +26,7 @@
     </div>
     <div class="navigation">
       <div class="nav-center container d-flex">
-        <a href="index.html" class="logo"><h1>Cool-T-Shirt</h1></a>
+        <a href="index.html" class="logo"><h1>Dans</h1></a>
 
         <ul class="nav-list d-flex">
           <li class="nav-item">
@@ -154,7 +156,7 @@
               <div>
                 <p>Boy’s T-Shirt</p>
                 <span>Price: $60.00</span> <br />
-                <a href="#">remove</a> 
+                <a href="#">remove</a>
               </div>
             </div>
           </td>
@@ -177,7 +179,7 @@
             <td>$250</td>
           </tr>
         </table>
-        <a href="Checkout.html " class="checkout btn">Proceed To Checkout</a> 
+        <a href="Checkout.html" class="checkout btn">Proceed To Checkout</a>
       </div>
     </div>
 
