--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    
+  
+    <!-- Boxicons -->
+    <link
+      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <!-- Glide js -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.core.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.css">
+    <!-- Custom StyleSheet -->
     <link rel="stylesheet" href="styles.css" >
     <title>ecommerce Website</title>
   </head>
@@ -15,7 +23,7 @@
       <!-- Top Nav -->
       <div class="top-nav">
         <div class="container d-flex">
-          <p</p>
+          <p>Order Online Or Call Us: (001) 2222-55555</p>
           <ul class="d-flex">
             <li><a href="#">About Us</a></li>
             <li><a href="#">FAQ</a></li>
@@ -25,7 +33,7 @@
       </div>
       <div class="navigation">
         <div class="nav-center container d-flex">
-        <a href="/" class="logo"><h1>Cool-T-Shirt</h1></a>
+        <a href="/" class="logo"><h1>Dans</h1></a>
 
           <ul class="nav-list d-flex">
             <li class="nav-item">
@@ -34,7 +42,15 @@
             <li class="nav-item">
               <a href="product.html" class="nav-link">Shop</a>
             </li>
-
+            <li class="nav-item">
+            <a href="#terms" class="nav-link">Terms</a>
+            </li>
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
             <li class="icons d-flex">
             <a href="login.html" class="icon">
               <i class="bx bx-user"></i>
@@ -306,7 +322,7 @@
 
 
     <!-- Featured -->
-
+  
     <section class="section new-arrival">
       <div class="title">
         <h1>Featured</h1>
