--- a/productDetails.html
+++ b/productDetails.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Box icons -->
-   
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+    />
     <!-- Custom StyleSheet -->
     <link rel="stylesheet" href="styles.css" >
     <title>Boy’s T-Shirt - Codevo</title>
@@ -14,7 +17,7 @@
     <!-- Navigation -->
     <div class="top-nav">
       <div class="container d-flex">
-
+        <p>Order Online Or Call Us: (001) 2222-55555</p>
         <ul class="d-flex">
           <li><a href="#">About Us</a></li>
           <li><a href="#">FAQ</a></li>
@@ -24,7 +27,7 @@
     </div>
     <div class="navigation">
       <div class="nav-center container d-flex">
-        <a href="index.html" class="logo"><h1>Cool-T-Shirt</h1></a>
+        <a href="index.html" class="logo"><h1>Dans</h1></a>
 
         <ul class="nav-list d-flex">
           <li class="nav-item">
