--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,7 @@
     <!-- Navigation -->
     <div class="top-nav">
       <div class="container d-flex">
-        <p>Order Online Or Call Us: (001) 2222-55555</p>
+        <p>Order Online Or Call Us:999</p>
         <ul class="d-flex">
           <li><a href="#">About Us</a></li>
           <li><a href="#">FAQ</a></li>
@@ -97,7 +97,7 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/product-2.jpg" alt="" />
+              <img src="product-2.jpg" alt="" />
               <div>
                 <p>Boy’s T-Shirt</p>
                 <span>Price: $50.00</span> <br />
@@ -111,7 +111,7 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/product-3.jpg" alt="" />
+              <img src="product-3.jpg" alt="" />
               <div>
                 <p>Boy’s T-Shirt</p>
                 <span>Price: $90.00</span> <br />
@@ -125,7 +125,7 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/product-4.jpg" alt="" />
+              <img src="product-4.jpg" alt="" />
               <div>
                 <p>Boy’s T-Shirt</p>
                 <span>Price: $60.00</span> <br />
@@ -139,7 +139,7 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/product-5.jpg" alt="" />
+              <img src="product-5.jpg" alt="" />
               <div>
                 <p>Boy’s T-Shirt</p>
                 <span>Price: $60.00</span> <br />
@@ -153,7 +153,7 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/product-6.jpg" alt="" />
+              <img src="product-6.jpg" alt="" />
               <div>
                 <p>Boy’s T-Shirt</p>
                 <span>Price: $60.00</span> <br />
@@ -196,7 +196,7 @@
         <div class="product-item">
           <div class="overlay">
             <a href="" class="product-thumb">
-              <img src="./images/product-6.jpg" alt="" />
+              <img src="product-6.jpg" alt="" />
             </a>
           </div>
           <div class="product-info">
@@ -213,7 +213,7 @@
         <div class="product-item">
           <div class="overlay">
             <a href="" class="product-thumb">
-              <img src="./images/product-1.jpg" alt="" />
+              <img src="product-1.jpg" alt="" />
             </a>
             <span class="discount">40%</span>
           </div>
@@ -231,7 +231,7 @@
         <div class="product-item">
           <div class="overlay">
             <a href="" class="product-thumb">
-              <img src="./images/product-3.jpg" alt="" />
+              <img src="product-3.jpg" alt="" />
             </a>
           </div>
           <div class="product-info">
@@ -248,7 +248,7 @@
         <div class="product-item">
           <div class="overlay">
             <a href="" class="product-thumb">
-              <img src="./images/product-2.jpg" alt="" />
+              <img src="product-2.jpg" alt="" />
             </a>
           </div>
           <div class="product-info">
