--- a/Checkout.html
+++ b/Checkout.html
@@ -8,6 +8,15 @@
       agent-id="4621c3aa-f0dd-43d9-8dcd-173e4050cde9"
       language-code="en"
     ></df-messenger>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0MTZQJXXZQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0MTZQJXXZQ');
+</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Box icons -->
