--- a/cart.html
+++ b/cart.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -181,6 +182,8 @@
           </tr>
         </table>
         <a href="Checkout.html" class="checkout btn">Proceed To Checkout</a>
+        
+
       </div>
     </div>
 
@@ -304,13 +307,13 @@
   /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
   </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0MTZQJXXZQ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LJ1FMEXC3N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-0MTZQJXXZQ');
+  gtag('config', 'G-LJ1FMEXC3N');
 </script>
   </body>
 </html>
