--- a/thankyou.html
+++ b/thankyou.html
@@ -14,14 +14,15 @@
 /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
 </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LJ1FMEXC3N"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-212220871-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LJ1FMEXC3N');
+  gtag('config', 'UA-212220871-1');
 </script>
+
   <div class="container">
     <section class="header">
       <h1 class="title">Successfully Checkout</h1>
