--- a/thankyou.html
+++ b/thankyou.html
@@ -22,6 +22,15 @@
 
   gtag('config', 'UA-212220871-1');
 </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-212220871-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-212220871-2');
+</script>
 
   <div class="container">
     <section class="header">
