--- a/Checkout.html
+++ b/Checkout.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
+    <img src="credit.png" alt="Credit Card" width="200" height="80">
+   </body>
     <script type="text/javascript">
       (function(d, m){
           var kommunicateSettings = 
